// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler: v-memo transform on component 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
const _component_Comp = resolveComponent("Comp")

  return _cE("view", null, [
    withMemo([_ctx.x], (): VNode => _cV(_component_Comp), _cache, 0)
  ])
}"
`;

exports[`compiler: v-memo transform on normal element 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", null, [
    withMemo([_ctx.x], (): VNode => _cE("view"), _cache, 0)
  ])
}"
`;

exports[`compiler: v-memo transform on root element 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return withMemo([_ctx.x], (): VNode => _cE("view"), _cache, 0)
}"
`;

exports[`compiler: v-memo transform on template v-for 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", null, [
    _cE(Fragment, null, RenderHelpers.renderList(_ctx.list, ({ x, y }, __key, __index, _cached): any => {
      const _memo: Array<any | null> = ([x, y === _ctx.z])
      if (_cached != null && _cached.key === x && isMemoSame(_cached, _memo)) return _cached
      const _item = _cE("text", _uM({ key: x }), "foobar")
      _item.memo = _memo
      return _item
    }, _cache, 0), 128 /* KEYED_FRAGMENT */)
  ])
}"
`;

exports[`compiler: v-memo transform on v-for 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", null, [
    _cE(Fragment, null, RenderHelpers.renderList(_ctx.list, ({ x, y }, __key, __index, _cached): any => {
      const _memo: Array<any | null> = ([x, y === _ctx.z])
      if (_cached != null && _cached.key === x && isMemoSame(_cached, _memo)) return _cached
      const _item = _cE("view", _uM({ key: x }), [
        _cE("text", null, "foobar")
      ])
      _item.memo = _memo
      return _item
    }, _cache, 0), 128 /* KEYED_FRAGMENT */)
  ])
}"
`;

exports[`compiler: v-memo transform on v-for with list-item 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
  return _cE("view", null, [
    _cE(Fragment, null, RenderHelpers.renderList(_ctx.list, ({ x, y }, __key, __index, _cached): any => {
      const _memo: Array<any | null> = ([x, y === _ctx.z])
      if (_cached != null && _cached.key === x && isMemoSame(_cached, _memo)) return _cached
      const _item = _cE("view", _uM({ key: x }), [
        _cE("text", null, "foobar")
      ])
      _item.memo = _memo
      return _item
    }, _cache, 0, "/xVKdEEB476nTdgg8k3dRg=="), 128 /* KEYED_FRAGMENT */)
  ])
}"
`;

exports[`compiler: v-memo transform on v-if 1`] = `
"function PagesIndexIndexRender(): any | null {
const _ctx = this
const _cache = this.$.renderCache
const _component_Comp = resolveComponent("Comp")

  return _cE("view", null, [
    isTrue(_ctx.ok)
      ? withMemo([_ctx.x], (): VNode => _cE("view", _uM({ key: 0 }), [
          _cE("text", null, "foo"),
          "bar"
        ]), _cache, 0)
      : withMemo([_ctx.x], (): VNode => _cV(_component_Comp, _uM({ key: 1 })), _cache, 1)
  ])
}"
`;
